[package]
name = "trust"
version = "0.1.0"
authors = ["FR4NC1SC011 <fcootzg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun-tap = "0.1.2"
etherparse = "0.8"
bitflags = "1.0"
nix = "0.13"

[lib]
name = "trust"

[[bin]]
name = "trust"
